--- a/2048-helm/templates/service.yaml
+++ b/2048-helm/templates/service.yaml
@@ -9,6 +9,6 @@ spec:
     - port: 80
       targetPort: 80
       protocol: TCP
-  type: NodePort
+  type: {{ .Values.service.type }}
   selector:
     app.kubernetes.io/name: app-2048
